Pizza_Project/Pizza_CSS/Pizza.css
#menuBG{
    width: 400px;
    height: 470px;
    margin: 10px auto;
}

#frmMenu{
    width: 400px;
    height: 200px;
}

#totalPrice{
    width: 200px;
    height: 190px;
    margin: 0 auto;
    float: right;
}

.left{
    width: 200px;
    height: 200px;
    float: left;
}

.right{
    width: 200px;
    height: 200px;
    float: right;
}

.center{
    width: 200px;
    height: 200px;
    float: left;
}

#showText{
    width: 200px;
    height: 190px;
    margin: 0px auto;
    float: left;
}

#cart{
    top:0;margin:0px auto;
    width: 400px;
    height: 200px;
}

#btnOrder{
    margin: 10px 0px 0px 100px;
    width: 100px;
    height: 40px;
}


h1, h3{
    font-family: Arial, san-serif;
}

h1, h3{
    color: darkred;
}

div{
    font-family: Gerogia, serif;
    color: darkorange;
}

body{
    background-color: lightgoldenrodyellow;
}

